Updated the title for @josh_miller.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Starter Template for Bootstrap</title>
+  <title>LVTech Radio - Live, Archive, Interactive Online Radio</title>
 
   <!-- Bootstrap core -->
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
