Fix for some titles / typos with feeds.

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
 
       <!-- Developers -->
       <div class="tab-pane" id="developers">
-        <h1>The Developers (and designers) Show!: 11AM - 12PM </h1>
+        <h1>The Developers (and designers) Show: 11AM - 12PM </h1>
         <p class="lead">{{developers.title}}</p>
         <div ng-repeat="track in developers.tracks" class="row">
           <h3>{{track.title}} <a href="{{track.url}}" class="btn btn-primary">Play <span class="glyphicon glyphicon-play"></span></a></h3>
