--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,11 @@
             <p class="lead">
               {{lvtech.title}}
             </p>
+            <p>
+              <a href="http://radio.lehighvalleytech.org/feed/lvtech.rss">RSS</a> |
+              <a href="http://radio.lehighvalleytech.org/feed/lvtech.atom">Atom</a> |
+              <a href="http://radio.lehighvalleytech.org/feed/lvtech.json">JSON</a>
+            </p>
           </div>
         </div>
 
@@ -136,6 +141,11 @@
       <div class="tab-pane" id="developers">
         <h1>The Developers (and designers) Show: 11AM - 12PM </h1>
         <p class="lead">{{developers.title}}</p>
+        <p>
+          <a href="http://radio.lehighvalleytech.org/feed/developers.rss">RSS</a> |
+          <a href="http://radio.lehighvalleytech.org/feed/developers.atom">Atom</a> |
+          <a href="http://radio.lehighvalleytech.org/feed/developers.json">JSON</a>
+        </p>        
         <div ng-repeat="track in developers.tracks" class="row">
           <h3>{{track.title}} <a href="{{track.url}}" class="btn btn-primary">Play <span class="glyphicon glyphicon-play"></span></a></h3>
           <div class="col-md-8" >
@@ -149,6 +159,11 @@
       <div class="tab-pane" id="startup">
         <h1>Startup Lehigh Valley: 1PM - 2PM (4th Wednesday) </h1>
         <p class="lead">{{startup.title}}</p>
+        <p>
+          <a href="http://radio.lehighvalleytech.org/feed/startup.rss">RSS</a> |
+          <a href="http://radio.lehighvalleytech.org/feed/startup.atom">Atom</a> |
+          <a href="http://radio.lehighvalleytech.org/feed/startup.json">JSON</a>
+        </p>        
         <div ng-repeat="track in startup.tracks" class="row">
           <h3>{{track.title}} <a href="{{track.url}}" class="btn btn-primary">Play <span class="glyphicon glyphicon-play"></span></a></h3>
           <div class="col-md-8" >
