Updated times and dates.

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
       <div class="tab-pane active" id="lvtech">
         <div class="row page-header">
           <div class="col-md-10">
-            <h1>LVTech Radio: 12PM - 1PM</h1>
+            <h1>LVTech Radio: 4PM - 6PM</h1>
             <p class="lead">
               {{lvtech.title}}
             </p>
@@ -139,7 +139,7 @@
 
       <!-- Developers -->
       <div class="tab-pane" id="developers">
-        <h1>The Developers (and designers) Show: 11AM - 12PM </h1>
+        <h1>The Developers Show Archive</h1>
         <p class="lead">{{developers.title}}</p>
         <p>
           <a href="http://radio.lehighvalleytech.org/feed/developers.rss">RSS</a> |
@@ -157,7 +157,7 @@
 
       <!-- Startup -->
       <div class="tab-pane" id="startup">
-        <h1>Startup Lehigh Valley: 1PM - 2PM (4th Wednesday) </h1>
+        <h1>Startup Lehigh Valley: Archive and Clips</h1>
         <p class="lead">{{startup.title}}</p>
         <p>
           <a href="http://radio.lehighvalleytech.org/feed/startup.rss">RSS</a> |
